--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
     text-align: center;
     border-radius: 1vw;
     background-color: darkgrey;
-    color: grey;
+    color: rgb(37, 84, 159);
     display: none;
 }
 
